samples/_failures_safe/1761005634_608d61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87a79d2a.c: In function ‘main’:
./samples/SAFE/__tmp_87a79d2a.c:155:12: error: missing terminating " character
  155 |     printf("\nSecond matrix:\
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_87a79d2a.c:155:5: error: expected expression at end of input
  155 |     printf("\nSecond matrix:\
      |     ^~~~~~
./samples/SAFE/__tmp_87a79d2a.c:155:5: error: expected declaration or statement at end of input
